force-app/main/default/objects/Shipment__c/Shipment__c.object-meta.xml
<CustomObject>
    <label>配送管理</label>
    <nameField>
        <displayFormat>SH-{0000000}</displayFormat>
        <label>配送番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>配送管理</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>