force-app/main/default/objects/Shipment__c/fields/DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate__c</fullName>
    <label>配送予定日</label>
    <type>Date</type>
</CustomField>