force-app/main/default/objects/Shipment__c/fields/EC_Order__c.field-meta.xml
<CustomField>
    <fullName>EC_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>注文(カスタム)</label>
    <referenceTo>EC_Order__c</referenceTo>
    <relationshipLabel>配送管理</relationshipLabel>
    <relationshipName>ShipmentECOrders_Shipment</relationshipName>
    <type>Lookup</type>
</CustomField>