force-app/main/default/objects/Shipment__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <label>郵便番号</label>
    <length>8</length>
    <type>Text</type>
</CustomField>