force-app/main/default/objects/Shipment__c/fields/Shipping_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Date__c</fullName>
    <label>発送日</label>
    <type>Date</type>
</CustomField>