force-app/main/default/objects/Shipment__c/fields/ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress__c</fullName>
    <label>配送先住所</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>