force-app/main/default/objects/Shipment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>配送ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>出荷準備中</fullName>
            </value>
            <value>
                <fullName>配送中</fullName>
            </value>
            <value>
                <fullName>遅延</fullName>
            </value>
            <value>
                <fullName>配達済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>