force-app/main/default/objects/Shipment__c/listViews/ShipmentList.listView-meta.xml
<ListView>
    <fullName>ShipmentList</fullName>
    <columns>NAME</columns>
    <columns>EC_Order__c</columns>
    <columns>OrderNumber__c</columns>
    <columns>Status__c</columns>
    <columns>DeliveryDate__c</columns>
    <columns>Shipping_Date__c</columns>
    <columns>Tracking_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>配達手続き中の商品</label>
</ListView>